# gpt-drift

./: README.md  drift.py  experiment.py  pyproject.toml  test_drift.py
docs/: design-spec.md
examples/: experiment.py
experiments/: compare_5_2_vs_5_4.py
src/gpt_drift/: __init__.py  cli.py  collector.py  constructs.py  fingerprint.py  pipeline.py  probes.py  segmentation.py
src/gpt_drift/comparison/: __init__.py  drift.py
src/gpt_drift/extractors/: __init__.py  base.py  lexical.py
tests/: test_drift.py
